implemented location repository; add missing properties to openapi contract
